correction calcul stats

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ logging.level.web=TRACE
 server.port=8082
 
 pokemonType.service.url=http://localhost:8080
-trainers.service.url=http://localhost:8081
+trainer.service.url=http://localhost:8081
 trainer.service.username=user
 trainer.service.password=c3039ecb-ac3f-4805-91ab-65180b6ad6b8
